--- a/package.json
+++ b/package.json
@@ -7,24 +7,29 @@
     "start": "node --trace-warnings dist/src/index.js",
     "start:dev": "tsc-watch --build --onSuccess 'npm start'",
     "start:dev:local": "NODE_ENV=dev tsc-watch --build --onSuccess 'npm start'",
-    "lint": "eslint ./src --ext .js,.ts --quiet && npx prettier --check ."
+    "lint": "eslint ./src --ext .js,.ts --quiet && npx prettier --check .",
+    "test": "NODE_ENV=dev jest --detectOpenHandles"
   },
   "author": "Juan Carlos Abadía",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@types/pg": "^8.6.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
     "@types/multer": "^1.4.7",
+    "@types/node": "^18.11.17",
     "@types/node-fetch": "^2.6.4",
+    "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint": "^8.30.0",
-    "tsc-watch": "^6.0.0"
+    "jest": "^29.3.1",
+    "jest-junit": "^15.0.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsc-watch": "^6.0.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -38,6 +43,7 @@
     "pg": "^8.8.0",
     "prettier": "^2.8.1",
     "sharp": "^0.32.1",
+    "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.0",
     "yamljs": "^0.3.0"
   }
